--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-    <ul id="list"></ul>
+    <h1>FizzBuzzDOM</h1>
+
+    <div id="list"></div>
     
 
     <script type="text/javascript" src="js/script.js"></script>
